# channels-tests-refactoring-kata

./: README.md
src/: channel.c  channel.h
test/: CMakeLists.txt  builders.c  builders.h  run_tests.c  test_channel.c
